<resources>
    <string name="app_name">Tripsero</string>
    <string name="app_name_lowercase">tripsero</string>
    <string name="pointer_icon_desc">Pointer Icon</string>
    <string name="profile_pic_desc">User Profile Picture</string>
    <string name="recommendation_text">Recommendations</string>
    <string name="trending_text">Trending</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="people">People</string>
    <string name="search">Search</string>
    <string name="places">Places</string>
    <string name="bookNow">Book Now</string>
    <string name="cover_image_desc">Destination Cover Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salutations">Hello, </string>
    <string name="click_here_to_login">click here to continue</string>
    <string name="welcome_user_login_to_continue">Welcome User, Login to Continue</string>
    <string name="enter_your_password">enter your password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email">enter your email</string>
    <string name="let_s_create_your_account">Let\'s Create your account</string>
    <string name="next">NEXT</string>
    <string name="enter_username">enter username</string>
    <string name="enter_full_name">enter full name</string>
    <string name="_1_3">1/3</string>
    <string name="enter_something_about_yourself">enter something about yourself</string>
    <string name="please_add_your_picture">add a profile picture</string>
    <string name="enter_your_bio">enter your bio</string>
    <string name="_3_3">3/3</string>
    <string name="_2_3">2/3</string>
    <string name="choose_gender">choose gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_age">select your date of birth</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="done">DONE</string>
    <string name="permission_required">Access permission is required</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="failed_to_update_profile">Failed to update profile : %1$s</string>
    <string name="signup_failed">Signup Failed : %1$s</string>
    <string name="verify">verify OTP </string>
    <string name="please_enter_one_time_password">please enter one time password</string>
    <string name="co_nde">CO\nDE</string>
    <string name="verification">verification</string>
    <string name="homepage_showing_places_near_by_recommended_n_menu_options">HomePage Showing Places; Near by; Recommended \n Menu options</string>
    <string name="full_name">Full Name</string>
    <string name="your_bio">Your Bio</string>
    <string name="your_phone_no">Your Phone No.</string>
    <string name="gender">Gender</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_username">Your Username</string>
    <string name="save">Save</string>
    <string name="log_out">Log out</string>
    <string name="your_birthdate">Your Birthdate</string>
    <string name="change_picture">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="photo_removed_successfully">Photo Removed Successfully</string>
    <string name="reset_password">Reset Password</string>
    <string name="something_went_wrong">Something went wrong : %1$s</string>
    <string name="reset_password_instructions">Reset Password instructions has been sent on email :  %1$s</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="email_sent_failed">Failed to send email :  %1$s</string>
    <string name="resend_timer">Resend in : %1$s</string>
    <string name="change_password">Change Password</string>
    <string name="password_changed_successfully">Password Changed Successfully</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_correct_email">Enter Correct Email</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="todo">TODO</string>
    <string name="new_password">New Password</string>
    <string name="attractions">Attractions</string>
    <string name="password">Password</string>
    <string name="status">Status</string>
    <string name="email">Email</string>
    <string name="select_photo">Select Photo</string>
    <string name="enter_message">Enter Message</string>
    <string name="this_is_my_message_that_will_wrap_into_multiple_lines_and_keep_on_going">This is my message that will wrap into multiple lines and keep on going</string>
    <string name="username">Username</string>
    <string name="latest_message">Latest Message</string>
    <!-- The salutations need to be updated once the user info linking is done -->
</resources>