<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/people"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/people"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/chats"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/chats"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

</menu>