<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="30dp"
    tools:context=".view.login.SignUp2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:text="@string/let_s_create_your_account"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signup_slide_text"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_2_3"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_gender"
                android:textColor="#000000"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:backgroundTint="#000000">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/female"
                    />

                <RadioButton
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/other"
                    />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_your_age"
                android:textColor="#000000"
                android:textSize="18sp" />

            <DatePicker
                android:id="@+id/age_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true" />

        </LinearLayout>

        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#000000"
            android:elevation="5dp"
            android:onClick="call3rdSigupScreen"
            android:text="@string/next"
            android:textColor="#FFFFFF" />


    </LinearLayout>

</ScrollView>