<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".view.login.VerifyOTP">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:includeFontPadding="false"
            android:text="@string/co_nde"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="100sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:includeFontPadding="false"
            android:text="@string/verification"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/otp_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:includeFontPadding="false"
            android:text="@string/please_enter_one_time_password"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="#65EAEAEA"
            app:cursorColor="#000000"
            app:hideLineWhenFilled="true"
            app:itemCount="6"
            app:itemHeight="40sp"
            app:itemRadius="5dp"
            app:itemWidth="40sp"
            app:lineColor="#000000"
            app:lineWidth="1dp"
            style="@style/PinWidget.PinView"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:onClick="callNextScreenFromOTP"
            android:text="@string/verify"
            android:textColor="@color/colorAccent" />


    </LinearLayout>

</ScrollView>