<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="30dp"
    tools:context=".view.login.SignUp1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:text="@string/let_s_create_your_account"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/signup_slide_text"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/_1_3"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_fullname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                android:textColorHint="#000000"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="#000000"
                app:hintTextColor="#000000"
                app:startIconTint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                android:textColorHint="@color/black"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="#000000"
                app:hintTextColor="#000000"
                app:startIconTint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintTextColor="@color/black"
                app:startIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signup_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:textColorHint="#000000"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidthFocused="2dp"
                app:endIconTint="#000000"
                app:hintTextColor="#000000"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#000000"
                app:startIconTint="#000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signup_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="#000000"
            android:elevation="5dp"
            android:onClick="callNextSigupScreen"
            android:text="@string/next"
            android:textColor="#FFFFFF" />


    </LinearLayout>

</ScrollView>