<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pg_userpic"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:onClick="changeImage"
        android:src="@drawable/ic_baseline_person_24"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="10dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_pg_userfullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name" />
            </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_pg_useremail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_email_address" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:onClick="btnChangePasswordClick"
                android:text="@string/change_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLogout"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:onClick="btnLogoutClick"
                    android:paddingLeft="32dp"
                    android:paddingRight="32dp"
                    android:text="@string/log_out"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnSave"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:onClick="btnSaveClick"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/save"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>