<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeScreenActivity">

    <TextView
        android:id="@+id/salutations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="86dp"
        android:text="@string/salutations"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/profile_pic_desc"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintBottom_toBottomOf="@id/salutations"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/salutations" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/salutations"
        android:layout_marginTop="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/recommendation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/recommendation_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/recommendation_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/recommendation_text">

                <LinearLayout
                    android:id="@+id/parent_linear_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/trending_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/trending_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recommendation_scroll_view" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/trending_text">

                <LinearLayout
                    android:id="@+id/parent_linear_layout2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                </LinearLayout>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>